Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-5557

Three same warning pop up at the same time when start debugging.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 2.3.0
    • Qt Creator 2.3.0-beta
    • Debugger
    • None
    • Workstation platform: Mac X OS 10.6.8
      Qt SDK version:v1.1.0
      (qtsdkinstaller-x64-2011-07-11.dmg)
      Qt Creator 2.2.82 (2.3.0-beta):
      Based on Qt 4.7.4 (64 bit)Built on Jul 20 2011 at 00:55:23From revision d7c2c23da8
      [SDKTestRound17]
    • fba97518ff00956bf1ec4a2a898529ac82adbdcb

      Steps:
      1. Create a new Qt quick UI.
      2. Add some breakpoint at qml file.
      3. Start Debugging.There will be a warning popup about some breakpoint cannot be handle.
      4. Click "ok".

      Excepted result:
      pop-up windows should be closed.

      Actually result:
      there need to click "ok" 3 times to close the warning window.

        1. 3popupWindows.jpg
          174 kB
          Chen xiaoxue
        2. DebugLog-rigntpart.txt
          5 kB
          Chen xiaoxue
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kkohne Kai Köhne
            chenpxia Chen xiaoxue
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes