Debugger: Only warn once about unhandled breakpoints

Don't show the dialog for every single breakpoint

Task-number: QTCREATORBUG-5557
Change-Id: Id1b60e92856cd2c8b81de43340bbaf4f5d7f3a8d
Reviewed-on: http://codereview.qt.nokia.com/2326
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Kai Koehne <kai.koehne@nokia.com>